# optics

./: README.md  pyproject.toml
docs/examples/: basic_raytracing_demo.py  gui.py  simulate_spectrometer.py  zmax_32970.zmx  zmax_63492.zmx
docs/examples/gui_widgets/: TrackingView.py  ZoomableFigure.py  callback_utils.py  callback_utils_test.py
docs/examples/hyperspectral_camera/: hyperspectral_camera.py  hyperspectral_camera_design.py
src/optics/: __init__.py  cie.py  cie64.txt  glass.py  glass_library.py  read_zmx.py  utils.py
src/optics/raytracing/: __init__.py  lenses.py  optical_surfaces.py  raytracing.py
tests/: test_all.py  test_even_asphere.py  test_geometry_and_raytracing.py  test_glass.py  test_lens_from_zemax_data.py  test_raytracing.py  test_raytracing2.py  test_read_zmx.py
tests/zmx_examples/: zmax_45277.zmx  zmax_45281.zmx  zmax_49656.ZAR  zmax_67151.zmx  zmax_67422.zmx
