[project]
name = "optics"
version = "0.1.0"
description = "Tools for ray optics simulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "zmxtools>=0.1.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
